@@ -1,5 +1,17 @@
 2016-06-05  Brady Eidson  <beidson@apple.com>
 
+        Unreviewed, rolling out r201694.
+
+        201693
+
+        Reverted changeset:
+
+        "Fix the build after r201693."
+        https://bugs.webkit.org/show_bug.cgi?id=158394
+        http://trac.webkit.org/changeset/201694
+
+2016-06-05  Brady Eidson  <beidson@apple.com>
+
         Fix the build after r201693.
         https://bugs.webkit.org/show_bug.cgi?id=158394
 
